# cpp-oop-review

./: CMakeLists.txt  README.md  main.cpp
cpp-oop-review/: CMakeLists.txt  README.md  main.cpp
cpp-oop-review/docs/: class-diagram.md  user-stories.md
cpp-oop-review/include/: ConsumableResource.h  Executable.h  Process.h  Resource.h  Task.h  UsableResource.h
cpp-oop-review/src/: ConsumableResource.cpp  Executable.cpp  Process.cpp  Resource.cpp  Task.cpp  UsableResource.cpp
docs/: class-diagram.md  user-stories.md
include/: ConsumableResource.h  Executable.h  Process.h  Resource.h  Task.h  UsableResource.h
src/: ConsumableResource.cpp  Executable.cpp  Process.cpp  Resource.cpp  Task.cpp  UsableResource.cpp
